# android_sdk_bazel_toolchain

./: BUILD.bazel  README.md  WORKSPACE  defs.bzl  toolchain.bzl
