load(":toolchain.bzl", "android_sdk")
load(":defs.bzl", "adb_bugreport")

android_sdk(
    name = "android_sdk_darwin_impl",
    adb = "@androidsdk//:platform-tools/adb",
    aapt = "@androidsdk//:build-tools/28.0.1/aapt",
    aapt2 = "@androidsdk//:build-tools/28.0.1/aapt2",
)


toolchain_type(name = 'android_sdk_darwin')

toolchain(
  name = 'android_sdk_darwin_toolchain',
  toolchain_type = ':android_sdk_darwin',
  exec_compatible_with = [
    '@bazel_tools//platforms:osx',
    '@bazel_tools//platforms:x86_64'],
  target_compatible_with = [
    '@bazel_tools//platforms:osx',
    '@bazel_tools//platforms:x86_64'],
  toolchain = ':android_sdk_darwin_impl',
)

adb_bugreport(
    name = "demo",
)
